# pic32cm-pl10-cnano-zephyr

./: .gitignore  CLAUDE.md  DEEPDIVE.md  FUSES.md  HARMONY-EXAMPLES.md  README.md  RUNBOOK-update-zephyr-pin.md  RUNBOOK.md  STANDBY.md  install-prerequisites.ps1  plot_current.py  reproduce-install.ps1  requirements-lock.txt  strommessung.md  stromtest_log.txt
app/: CMakeLists.txt  app.overlay  cmd_sections.ld  prj.conf
app/src/: app_threads.h  button.c  cmd.h  cmd_parser.c  diag.c  fault.c  led_ctrl.c  led_ctrl.h  load.c  lpsleep.c  main.c  pl10_adc.c  pl10_adc.h  sleeptest.c  standby.c
mini/: README.md  build.sh  step.c  step.ld  step_vectors.s  while1.ld  while1.s
tools/: faultloc.py  hold_reset.py
